Grid layout + scrollspy

--- a/src/404.njk
+++ b/src/404.njk
@@ -6,6 +6,7 @@ kicker: 'Feilkode 404'
 title: 'Fant ikke siden'
 description: 'Siden kan være flyttet, slettet eller det er en feil i lenken.'
 bodyClass: 'flex flex-col min-h-full'
+permalink: false
 ---
 {% extends "blank.njk" %}
 
