--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -4,8 +4,8 @@ title: 'Forside'
 description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
 tags: ['template']
 order: 1
-permalink: '/index.html'
 noJS: true
+permalink: false
 ---
 {%- extends 'base.njk' -%}
 
