--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,11 +1,11 @@
-<aside aria-label="Bare en prototype" class="z-20 grid py-8 text-xl leading-snug border-t-8 bg-deepblue-800 border-warning grid-cols-layout text-purple-50">
+<aside aria-label="Bare en prototype" class="z-20 grid py-8 text-lg leading-snug text-black bg-orange-300 border-t-8 border-orange-400 border-warning px-xs-2xl">
   <div class="flex items-start gap-4 md:gap-5 md:items-center col-wide">
-    <div class="grid w-12 h-12 -mb-px rounded-full bg-deepblue-900 md:w-16 md:h-16 shrink-0 place-items-center">
-      {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-6 h-6 md:w-8 md:h-8 mb-1') | safe }}
+    <div class="grid -mb-px bg-orange-900 rounded-full w-xl h-xl shrink-0 place-items-center">
+      {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-md h-md mb-1 text-orange-200') | safe }}
     </div>
     <div class="max-w-[50ch]">
-      <p><span class="font-semibold">Hei!</span> Dette er en bare en prototype til testing og utvikling.
-      <a class="text-blue-300 underline fine:hover:no-underline fine:hover:text-orange-300" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
+      <p><span class="mr-1 font-bold">Hei!</span> Dette er en bare en prototype til testing og utvikling.
+      <a class="text-blue-600 underline fine:hover:no-underline fine:hover:text-blue-500" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
     </div>
   </div>
 </aside>
