Dropdown i TOC sidespalte

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="/assets/main.min.css" type="text/css" />
     {%- block styles -%}{%- endblock -%}
     {% if alpine %}      
+    <script src="/assets/alpine-intersect-plugin.min.js" type="text/javascript" defer></script>
     <script src="/assets/alpine.min.js" type="text/javascript" defer></script>
     {% endif %}
     {%- block script -%}{%- endblock -%}
