--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -43,7 +43,9 @@ alpine: true
           <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
+          {% if not loop.last %}
           <p class="text-pretty">{{ chapter.data.description | safe }}</p>
+          {% endif %}
         </li>
         {% endfor %}
       </ul>
@@ -53,7 +55,8 @@ alpine: true
     {# Innhold #}
     {% set chapters = collections.kapittel %}
 
-    {% for chapter in chapters %} 
+    {% for chapter in chapters %}
+    {% set chapterindex = loop.index %}
     <section class="grid items-end col-full grid-cols-mini lg:grid-cols-maxi" id="{{ chapter.data.title | slugify }}">
       <div class="grid grid-cols-mini lg:grid-cols-maxi col-full">
         {# <div class="rounded-lg aspect-[2/1] mt-xl border border-gray-300 mb-sm"></div> #}
@@ -65,24 +68,46 @@ alpine: true
 
         {# Static Chapter TOC #}
         {% if chapter.templateContent %}
-        <div class="bg-gray-100 rounded-lg my-md col-main bottom-xl py-xs px-sm max-w-max">
+        <nav class="bg-gray-100 rounded-lg my-md col-main toc-inline bottom-xl py-xs px-sm max-w-max">
           <h3 class="font-semibold">I dette kapittelet</h3>
           {{ chapter.templateContent | toc | safe }}
-        </div>
+        </nav>
         {% endif %}
       </div>
 
-      <div class="grid items-end grid-cols-mini lg:grid-cols-maxi col-full">
+      <div class="grid items-start grid-cols-mini lg:grid-cols-maxi col-full" x-data="{ tocShown: false, tocOpen: false }">
 
         {# Sticky Chapter TOC #}
         {% if chapter.templateContent %}
-        <div class="sticky hidden row-span-3 my-md col-side bottom-lg toc2 md:block">
-          <div class="text-sm tracking-widest uppercase mb-3xs">Kapittel {{ loop.index }}</div>
-          <div class="font-bold mb-xs text-lg/tight">{{ chapter.data.title | safe }}</div>
+        <div class="sticky my-md col-side toc-sticky top-6 min-h-[80vh] row-span-2" x-intersect:enter.full="tocShown = true" x-intersect:leave.half="tocShown = false">
+          <nav class="sticky top-6" 
+            x-show="tocShown" 
+            x-transition:enter="transition ease-out duration-300"
+            x-transition:enter-start="opacity-0 -translate-y-full"
+            x-transition:enter-end="opacity-100 translate-y-0"
+            x-transition:leave="transition ease-out duration-900 opacity-0"
+          >
+            <div class="relative">
+              <button class="grid w-full py-3 pl-4 pr-12 text-left border border-gray-200 rounded-t-lg hover:bg-gray-100" type="button" x-on:click="tocOpen = !tocOpen">
+                <span class="text-sm tracking-widest uppercase mb-3xs">Kapittel {{ loop.index }}</span>
+                <span class="font-bold text-lg/tight">{{ chapter.data.title | safe }}</span>
+                {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('absolute top-1/2 -translate-y-1/2 right-4 w-5 h-5') | safe }}
+              </button>
+              <div class="absolute z-10 hidden w-full bg-white rounded-b-lg shadow-lg top-full inset-x" x-bind:class="tocOpen && '!block'">
+                {% for chapter in chapters %}
+                  <a class="px-4 py-2.5 flex gap-2 items-baseline {{ '!bg-blue-600 text-white' if loop.index === chapterindex }} {{ 'hover:underline hover:bg-blue-50' if loop.index != chapterindex }}" href="#{{ chapter.data.title | slugify | safe }}">
+                    <span class="mr-4">{{ chapter.data.title }}</span>
+                    <span class="w-2.5 h-2.5 rounded-full ml-auto self-center {{ 'bg-white' if loop.index === chapterindex }}"></span>
+                  </a>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="pt-2 pb-4 -mt-px border border-gray-200 roundex-b-lg">
+              {{ chapter.templateContent | toc | safe }}
+            </div>
+          </div>
 
-          {{ chapter.templateContent | toc | safe }}
-
-          <div class="flex flex-wrap pt-3 mt-4 text-blue-600 border-t border-gray-200 gap-x-sm gap-y-3xs">
+          {# <div class="flex flex-wrap pt-3 mt-4 text-blue-600 border-t border-gray-200 gap-x-sm gap-y-3xs">
             {% if loop.index < loop.length %}              
             <a href="#{{ chapters[loop.index0 + 1].data.title | slugify | safe }}">Neste kapittel</a>
             {% endif %}
@@ -90,8 +115,8 @@ alpine: true
             <a href="#{{ chapters[loop.index0 - 1].data.title | slugify | safe }}">Forrige kapittel</a>
             {% endif %}
             <a href="#toppen">Til toppen</a>
-          </div>
-        </div>
+          </div> #}
+        </nav>
         {% endif %}
 
         {# Main Content #}
@@ -112,13 +137,13 @@ alpine: true
     const headings = document.querySelectorAll('.prose h3');
     const headingsArr = Array.from(headings);
 
-    const navItems = document.querySelectorAll('.toc2 li');
+    const navItems = document.querySelectorAll('.toc-sticky li');
 
     function activateNavByIndex(index) {
       if (headings[index].classList.contains('active'))
         return;
 
-      const currentActive = document.querySelectorAll('.toc .active');
+      const currentActive = document.querySelectorAll('.toc-sticky .active');
       for (let i = currentActive.length - 1; i >= 0; i--) {
         currentActive[i].classList.remove('active');
       }
