Fikse site-header

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -32,7 +32,7 @@
       indexOpen: false,
       audienceDropdownOpen: false,
       languageDropdownOpen: false,
-      loggedIn: false,
+      loggedIn: true,
       loginOpen: false,
       menuOpen: false,
       notifyOpen: false,
