--- a/src/_includes/partials/header-new.njk
+++ b/src/_includes/partials/header-new.njk
@@ -1,20 +1,20 @@
 {%- set audience = audienceOverride or menu.audience -%}
-{%- set language = ['Bokmål', 'Nynorsk', 'English', 'Davvisámegiella'] -%}
 
 <header class="relative z-50 isolate">
   <nav class="text-sm bg-gray-100 px-xs-2xl">
     <div class="flex flex-wrap-reverse justify-between mx-auto max-w-wide">
       {# Audience #}
       <div class="relative" x-on:click.outside="audienceDropdownOpen = false">
-        <button class="flex items-center px-4 py-2 -ml-2 gap-3xs sm:hidden" x-on:click="audienceDropdownOpen = !audienceDropdownOpen" type="button" aria-expanded="false">
+        <button class="flex items-center gap-2 px-4 py-2 -ml-sm sm:hidden hover:bg-gray-200" x-on:click="audienceDropdownOpen = !audienceDropdownOpen" type="button" aria-expanded="false">
           <span>{{ activeRole }}</span>
           {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5') | safe }}
         </button>
-        <ul class="absolute z-50 bg-white rounded py-2xs -left-3xs min-w-40 sm:bg-transparent sm:rounded-none sm:py-0 sm:flex sm:gap-4 top-full sm:static" x-bind:class=" audienceDropdownOpen ? 'grid shadow-md sm:shadow-none' : 'hidden'">
+        <ul class="absolute z-50 bg-white rounded -left-1 min-w-40 sm:bg-transparent sm:rounded-none sm:py-0 sm:flex sm:gap-4 top-full sm:static" x-bind:class=" audienceDropdownOpen ? 'grid shadow-md sm:shadow-none' : 'hidden'">
           {%- for item in audience -%}
-            <li class="grid py-2 items-center {{ 'sm:shadow-menuActive font-semibold' if activeRole === item.title else ' transition-shadow sm:hover:shadow-menuHover' }}">
-              <a href="{{ item.href or '#' }}" class="px-3 sm:px-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 ">
+            <li class="grid items-center {{ 'sm:shadow-menuActive font-semibold' if item.title === activeRole else ' transition-shadow sm:hover:shadow-menuHover' }}">
+              <a href="{{ item.href or '#' }}" class="flex items-center justify-between gap-4 px-3 py-2 sm:px-0 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ 'bg-blue-500 text-white sm:text-current sm:bg-transparent' if item.title === activeRole else 'hover:bg-blue-50 sm:hover:bg-transparent' }}">
                 {{ item.title }}
+                <span class="w-2 h-2 rounded-full ml-4 shrink-0 sm:hidden {{ 'bg-white' if item.title === activeRole }}" aria-hidden="true"></span>
               </a>
             </li>
           {%- endfor -%}
@@ -30,23 +30,25 @@
           x-on:click="languageDropdownOpen = !languageDropdownOpen" 
           aria-expanded="false">
           {{ '/src/_includes/svg/icons/globe.svg' | svgContents('flex-none w-5 h-5') | safe }}
-          <span>Språk / Language</span>
-          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 ml-3') | safe }}
+          <span>Språk/Language</span>
+          <span class="hidden xs:inline">(NO/NB)</span>
+          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-5 h-5 ml-1.5 -translate-y-px') | safe }}
         </button>
-        {# <ul class="absolute z-50 py-1 bg-white rounded -right-2 min-w-40 top-full" x-bind:class=" languageDropdownOpen ? 'grid shadow-md' : 'hidden'">
-          {%- for item in language -%}
-            <li class="grid items-center">
-              <button type="button" class="py-2.5 px-3 text-left focus:outline-none focus-visible:ring-2 hover:bg-gray-100 focus-visible:ring-blue-800">
-                {{ item }}
+        <ul class="absolute z-50 bg-white rounded -right-2 min-w-40 top-full" x-bind:class=" languageDropdownOpen ? 'grid shadow-md' : 'hidden'">
+          {%- for item in site.language -%}
+            <li class="">
+              <button type="button" class="py-2.5 flex w-full justify-between items-baseline gap-4 px-3 text-left focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 {{ 'bg-blue-500 text-white' if loop.first else 'hover:bg-blue-50' }}">
+                <span>{{ item.full }} {{ '(' + item.short + ')' if item.short }}</span>
+                <span class="w-2 h-2 rounded-full ml-4 shrink-0 {{ 'bg-white' if loop.first }}" aria-hidden="true"></span>
               </button>
             </li>
           {%- endfor -%}
-        </ul> #}
+        </ul>
       </div>
     </div>
   </nav>
 
-  <nav class="px-xs-2xl">
+  <nav class="z-10 bg-white px-xs-2xl">
     <div class="grid grid-cols-[auto_1fr] max-w-wide mx-auto">
 
       {# Logo #}
@@ -58,9 +60,7 @@
       </div>
 
       {# Menu Buttons #}
-      {# {%- set menuButtonClasses = "flex items-center justify-center p-1 sm:pl-2.5 sm:pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 sm:py-2 fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%} #}
-
-      {%- set menuButtonClasses = "flex items-center justify-center p-1 sm:pl-2.5 sm:pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 sm:py-2 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
+      {%- set menuButtonClasses = "flex items-center justify-center pl-2.5 pr-3 leading-none font-semibold gap-0.5 text-blue-500 rounded min-w-16 py-2 fine:hover:bg-deepblue-50 focus:outline-none focus-visible:ring-2 focus-visible:ring-blue-800 group" -%}
 
       <div class="flex self-center gap-2 py-2 justify-self-end sm:-mr-2.5">
         <button class="{{ menuButtonClasses }}" x-show="!loggedIn" x-on:click="loginOpen = !loginOpen, menuOpen = false" x-bind:aria-expanded="loginOpen">
@@ -68,18 +68,18 @@
           <span class="mt-px">Logg inn</span>
         </button>
 
-        {# {%- include "partials/login.njk" -%} #}
+        {%- include "partials/login.njk" -%}
 
-        {# <button class="{{ menuButtonClasses }}" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'" x-show="loggedIn" x-bind:aria-expanded="notifyOpen">
+        <button class="{{ menuButtonClasses }}" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'" x-show="loggedIn" x-bind:aria-expanded="notifyOpen">
           <span class="relative">
             {{ '/src/_includes/svg/icons/person-circle.svg' | svgContents('w-6 h-6 sm:w-7 sm:h-7 shrink-0 pointer-events-none') | safe }}
             <span x-show="newNotifications" class="absolute right-0 block w-1.5 h-1.5 sm:w-2 sm:h-2 bg-red-400 rounded-full top-0.5" x-bind:class="notifyOpen ? 'ring-2 ring-deepblue-50' : 'ring-2 ring-white fine:group-hover:ring-deepblue-50'"></span>
           </span>
           <span class="mt-px sm:hidden">Min side</span>
           <span class="hidden mt-px sm:inline-block">Isac Norland</span>
-        </button> #}
+        </button>
 
-        {# {%- include "partials/notifications.njk" -%} #}
+        {%- include "partials/notifications.njk" -%}
 
         <span class="self-stretch hidden w-px my-2 bg-gray-300 sm:block" aria-hidden="true"></span>
 
@@ -93,11 +93,11 @@
           <span class="mt-px">Meny</span>
         </button>
 
-        {# {%- include "partials/navigation.njk" -%} #}
+        {%- include "partials/navigation.njk" -%}
       </div>
     </div>
   </div>
 </header>
 
 {# Overlay #}
-{# <button class="fixed inset-0 z-40 w-full h-full opacity-0 cursor-default bg-black/20" x-bind:class="(menuOpen || notifyOpen || loginOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, loginOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false,  loginOpen = false"></button> #}
+<button class="fixed inset-0 z-40 w-full h-full opacity-0 cursor-default bg-black/20" x-bind:class="(menuOpen || notifyOpen || loginOpen) ? 'animate-fade-in' : 'hidden'" x-on:click="menuOpen = false, notifyOpen = false, loginOpen = false" x-on:keyup.escape.window="menuOpen = false, notifyOpen = false,  loginOpen = false"></button>
