--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,4 +1,4 @@
-<aside aria-label="Bare en prototype" class="z-20 grid py-8 text-lg leading-snug text-black bg-orange-300 border-t-8 border-orange-400 border-warning px-xs-2xl">
+<aside aria-label="Bare en prototype" class="grid py-8 text-lg leading-snug text-black bg-orange-300 border-t-8 border-orange-400 border-warning px-xs-2xl">
   <div class="flex items-start gap-4 md:gap-5 md:items-center col-wide">
     <div class="grid -mb-px bg-orange-900 rounded-full w-xl h-xl shrink-0 place-items-center">
       {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-md h-md mb-1 text-orange-200') | safe }}
