--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -13,8 +13,8 @@
         </a>
       </p>
     </div>
-    <div class="bg-gray-100 border-b relative border-gray-200 border-t max-h-[55dvh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
-      <div class="sticky inset-x-0 top-0 h-3 -mb-3 bg-gradient-to-b from-gray-100 to-transparent"></div>
+    <div class="bg-gray-50 border-b relative border-gray-200 border-t max-h-[55dvh] overflow-y-auto overscroll-contain fancy-scroll" x-show="newNotifications">
+      <div class="sticky inset-x-0 top-0 h-3 -mb-3 bg-gradient-to-b from-gray-100 to-transparent mix-blend-multiply"></div>
       <div class="p-6 py-4 px-clamp-gap">
         <h2 class="text-lg font-semibold">Varsler</h2>
         <h3 class="mt-3 text-sm tracking-wider uppercase opacity-80">Oppgaver</h3>
@@ -64,7 +64,7 @@
           {%- endfor -%}
         </div>
       </div>
-      <div class="sticky inset-x-0 bottom-0 h-3 bg-gradient-to-t from-gray-100 to-transparent"></div>
+      <div class="sticky inset-x-0 bottom-0 h-3 bg-gradient-to-t from-gray-100 to-transparent mix-blend-multiply"></div>
     </div>
     <div class="grid">
       <div x-show="!newNotifications" class="border-t border-gray-200 mx-clamp-gap sm:mx-6"></div>
