Flex til indre layout i kapitler

--- a/src/_includes/partials/banner.njk
+++ b/src/_includes/partials/banner.njk
@@ -1,10 +1,10 @@
-<aside aria-label="Bare en prototype" class="grid py-8 text-lg leading-snug text-black bg-orange-300 border-t-8 border-orange-400 border-warning px-xs-2xl">
+<aside aria-label="Bare en prototype" class="grid pt-6 pb-8 text-lg leading-snug text-black bg-orange-300 border-t-8 border-warning px-xs-2xl">
   <div class="flex items-start gap-4 md:gap-5 md:items-center col-wide">
     <div class="grid -mb-px bg-orange-900 rounded-full w-xl h-xl shrink-0 place-items-center">
       {{ '/src/_includes/svg/icons/helmet.svg' | svgContents('w-md h-md mb-1 text-orange-200') | safe }}
     </div>
-    <div class="max-w-[50ch]">
-      <p><span class="mr-1 font-bold">Hei!</span> Dette er en bare en prototype til testing og utvikling.
+    <div class="max-w-[50ch] text-balance">
+      <p><span class="mr-1 font-bold">Hei!</span> Dette er en en prototype til testing og utvikling.
       <a class="text-blue-600 underline fine:hover:no-underline fine:hover:text-blue-500" href="https://www.nav.no/">Her er lenken til nav.no</a> om du har kommet feil.</p>
     </div>
   </div>
