--- a/src/_includes/partials/notifications.njk
+++ b/src/_includes/partials/notifications.njk
@@ -1,6 +1,6 @@
 {# Notifications #}
 <div class="absolute inset-x-0 z-40 grid w-full h-0 grid-cols-mini lg:grid-cols-maxi top-full" x-bind:class="notifyOpen ? 'opacity-0 animate-dropdown' : 'hidden'">
-  <div class="lg:max-w-xl bg-white rounded-b-lg shadow-xl md:max-h-[92vh] col-full sm:col-wide lg:justify-self-end sm:-mx-6">
+  <div class="lg:max-w-xl w-full bg-white rounded-b-lg shadow-xl md:max-h-[92vh] col-full sm:col-wide lg:justify-self-end sm:-mx-6">
     <div class="px-6 px-clamp-gap">
       <p class="grid pt-5 pb-4" x-on:click="newNotifications = !newNotifications">
         <span class="text-sm tracking-wider uppercase opacity-80">Logget inn</span>
