--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -130,7 +130,7 @@
   .grid-cols-mini {
     --_gutter: clamp(0.75rem, -1.1591rem + 9.5455vw, 6rem);
     grid-template-columns: 
-      [full-start] var(--_gutter) minmax(0, 1fr) [wide-start main-start side-start] minmax(0, 40rem) [main-end side-end wide-end] minmax(0, 1fr) var(--_gutter) [full-end];
+      [full-start] var(--_gutter) minmax(0, 1fr) [wide-start main-start side-start] minmax(0, 42rem) [main-end side-end wide-end] minmax(0, 1fr) var(--_gutter) [full-end];
   }
 
   /* 83.25 */
@@ -151,6 +151,6 @@
   .col-side { grid-column: side }
 
   .border-warning {
-    border-image: repeating-linear-gradient(-64deg,#ffc166,#ffc166 10px,#00243a 0,#00243a 20px) 20;
+    border-image: repeating-linear-gradient(-64deg, #FFAC33, #FFAC33 10px, #00243a 0, #00243a 20px) 20;
   }
 }
