--- a/src/pages/produkt/produkt.njk
+++ b/src/pages/produkt/produkt.njk
@@ -37,15 +37,21 @@ alpine: true
     {# Innholdsfortegnelse #}
     <div class="mt-lg">
       <h2 class="text-base font-semibold">Innhold på siden</h2>
-      <ul class="grid gap-1 mt-2xs">
-        {% for chapter in collections.kapittel %}
-        <li class="relative grid items-center bg-gray-100 rounded {{ 'rounded-t-xl' if loop.first }} {{ 'rounded-b-xl' if loop.index === 4 }} {{ 'rounded-xl mt-md' if loop.last }} py-xs px-xs group hover:bg-gray-200 gap-x-md">
-          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0" href="#{{ chapter.data.title | slugify }}">
+      <ul class="grid mt-2xs">
+        {% for chapter in collections.kapittel.slice(0,4) %}
+        <li class="relative grid items-center bg-gray-100 px-5 group hover:bg-gray-200 {{ 'rounded-t-xl pt-4' if loop.first else 'py-2' }} {{ 'rounded-b-xl pb-4' if loop.last else 'py-2' }}">
+          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
             {{ chapter.data.title }}
           </a>
-          {% if not loop.last %}
           <p class="text-pretty">{{ chapter.data.description | safe }}</p>
-          {% endif %}
+        </li>
+        {% endfor %}
+
+        {% for chapter in collections.kapittel.slice(-1) %}
+        <li class="relative grid items-center px-5 py-4 mt-4 bg-gray-100 rounded-xl group hover:bg-gray-200">
+          <a class="font-semibold underline text-base/snug group-hover:no-underline after:absolute after:inset-0 " href="#{{ chapter.data.title | slugify }}">
+            {{ chapter.data.title }}
+          </a>
         </li>
         {% endfor %}
       </ul>
@@ -75,16 +81,21 @@ alpine: true
         {% endif %}
       </div>
 
-      <div class="grid items-start grid-cols-mini lg:grid-cols-maxi col-full" x-data="{ tocShown: false, tocOpen: false }">
+      <div class="flex items-start justify-between col-wide gap-xs-2xl" x-data="{ tocShown: false, tocOpen: false }">
+
+        {# Main Content #}
+        <div class="prose mt-md lg:basis-3/5 max-w-prose shrink-1">
+          {{ chapter.templateContent | markdown | safe }}
+        </div>
 
         {# Sticky Chapter TOC #}
         {% if chapter.templateContent %}
-        <div class="hidden lg:block sticky my-md col-side toc-sticky top-6 min-h-[80vh] row-span-2" x-intersect:enter.full="tocShown = true" x-intersect:leave.half="tocShown = false">
+        <div class="hidden lg:block sticky my-md toc-sticky top-6 min-h-[92vh] lg:basis-2/5 shrink-5" x-intersect:enter.full="tocShown = true" x-intersect:leave.half="tocShown = false">
           <nav class="sticky top-6" 
             x-show="tocShown" 
             x-transition:enter="transition ease-out duration-300"
-            x-transition:enter-start="opacity-0 -translate-y-full"
-            x-transition:enter-end="opacity-100 translate-y-0"
+            x-transition:enter-start="opacity-0"
+            x-transition:enter-end="opacity-100"
             x-transition:leave="transition ease-out duration-900 opacity-0"
           >
             <div class="relative">
@@ -119,10 +130,6 @@ alpine: true
         </nav>
         {% endif %}
 
-        {# Main Content #}
-        <div class="prose mt-md">
-          {{ chapter.templateContent | markdown | safe }}
-        </div>
       </div>
     </section>
     {% endfor %}
